syntax = "proto3";

option csharp_namespace = "gRPC_Server.Protos";

package calculosGeometricosPlanos;

service CalculoGeometricoPlano {
	rpc AreaTriangulo (Triangulo) returns (Area);
	rpc AreaRetangulo (Retangulo) returns (Area);
}

message Triangulo {
	double base = 1;
	double altura = 2;
}

message Retangulo {
	double comprimento = 1;
	double largura = 2;
}

message Area {
	double area_ = 1;
}
